--- a/public/css/template-style.css
+++ b/public/css/template-style.css
@@ -260,3 +260,28 @@ form.customform input, form.customform select, form.customform textarea {
   float: none;
   }
 }
+/*#footer_area {
+	position:fixed;
+	left:0px;
+	bottom:0px;
+	height:30px;
+	width:100%;
+	background:#999;
+}*/
+.about_us {
+	font-size: 22px;
+}
+#background p {
+	font-size: 14px;
+}
+#background li {
+	font-size: 14px;
+}
+#background {
+	background-color: white;
+	width: 100%;
+	padding-left: 200px;
+    padding-right: 200px;
+    padding-top: 200px;
+    padding-bottom: 100px;
+}
