--- a/public/css/template-style.css
+++ b/public/css/template-style.css
@@ -285,3 +285,7 @@ form.customform input, form.customform select, form.customform textarea {
     padding-top: 200px;
     padding-bottom: 100px;
 }
+.container {
+	height: 500px;
+	width: 300px;
+}
