--- a/public/css/responsee.css
+++ b/public/css/responsee.css
@@ -50,11 +50,11 @@ table {
 	text-align:left;
 	width:100%;
 	}
-table tr td, table tr th {padding:0.625em;}
-table tfoot, table thead {background:none repeat scroll 0 0 #e0e0e0;}
-table tr:nth-of-type(2n) {background:none repeat scroll 0 0 #e0e0e0;}
-th {border-right:1px solid #fff;}
-td {border-right:1px solid #e0e0e0;}
+/*table tr td, table tr th {padding:0.625em;}*/
+/*table tfoot, table thead {background:none repeat scroll 0 0 #e0e0e0;}*/
+/*table tr:nth-of-type(2n) {background:none repeat scroll 0 0 #e0e0e0;}*/
+/*th {border-right:1px solid #fff;}*/
+/*td {border-right:1px solid #e0e0e0;}*/
 .size-960 .line {
   margin:0 auto;
   max-width:60em;
